# tardigrade-project

./: .cursorrules  .editorconfig  .env.example  .flake8  .gitignore  .gitlab-ci.yml  LICENSE.txt  Readme.md  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: copilot-instructions.md
.github/workflows/: production.yml  qa.yml
.kiro/steering/: api-documentation.md  architecture.md  authentication.md  bedrock-agents.md  cicd.md  databases.md  docker.md  environment-variables.md  infrastructure.md  logging.md  module-documentation.md  project-standards.md  prompt-engineering.md  python-tooling.md  scripts.md  sql-optimization.md  sqlalchemy-alembic.md  testing.md  user-documentation.md
alembic/: env.py
alembic/versions/: 001_create_users_table.py
docker/local/: .gitkeep  Dockerfile  docker-compose.yml
docker/production/: .gitkeep  Dockerfile
docker/qa/: .gitkeep  Dockerfile
docs/: CICD_SECRETS.md
scripts/: .gitkeep  migrate.sh  run.sh  setup.sh  terraform.sh  test.sh
src/: __init__.py  main.py
src/application/: README.md  __init__.py
src/application/interfaces/: __init__.py  llm_port.py  repository_port.py
src/domain/: README.md
src/domain/entities/: __init__.py  (+1 more)
src/infrastructure/: README.md  __init__.py
src/shared/: __init__.py  config.py  logging.py
terraform/local/: .gitkeep  main.tf  variables.tf
terraform/production/: .gitkeep  backend.tf  main.tf
terraform/qa/: .gitkeep  backend.tf  main.tf
tests/: README.md  __init__.py  conftest.py
tests/factories/: user_factory.py
tests/unit/: test_scripts.py
(+19 files in other folders)
